fix: light theme flickering (#133)
* fix: light theme flickering


* fix theme body selector


---------

--- a/src/styles/_color.scss
+++ b/src/styles/_color.scss
@@ -26,7 +26,7 @@ body {
   --system-error: #FF0000;
 }
 
-body.light {
+html[data-theme="light"] body {
   --bg-color: #fff;
   --border-color: #dedede;
   --border-extra: #dedede;
